--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,18 +1,13 @@
 {
-  "extends": "@repo/typescript-config/nextjs.json",
+  "extends": "tsconfig/next.json",
   "compilerOptions": {
     "plugins": [
       {
         "name": "next"
       }
-    ]
+    ],
+    "baseUrl": "."
   },
-  "include": [
-    "next-env.d.ts",
-    "next.config.js",
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts"
-  ],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
