--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -21,8 +21,10 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "joi": "^17.11.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
@@ -37,6 +39,7 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
+    "eslint-config-custom": "workspace:*",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
@@ -46,10 +49,9 @@
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
+    "tsconfig": "workspace:*",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3",
-    "eslint-config-custom": "workspace:*",
-    "tsconfig": "workspace:*"
+    "typescript": "^5.1.3"
   },
   "jest": {
     "moduleFileExtensions": [
