--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lucide-react": "^0.244.0",
     "next": "^13.4.1",
     "next-auth": "^4.24.5",
     "react": "^18.2.0",
