--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.3",
-    "lucide-react": "^0.244.0",
-    "next": "^13.4.1",
+    "lucide-react": "^0.303.0",
+    "next": "^14.0.4",
     "next-auth": "^4.24.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -20,14 +20,14 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^17.0.12",
-    "@types/react": "^18.0.22",
-    "@types/react-dom": "^18.0.7",
-    "autoprefixer": "^10.4.14",
+    "@types/node": "^20.10.6",
+    "@types/react": "18.2.46",
+    "@types/react-dom": "18.2.18",
+    "autoprefixer": "^10.4.16",
     "eslint-config-custom": "workspace:*",
-    "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.2",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0",
     "tsconfig": "workspace:*",
-    "typescript": "^4.5.3"
+    "typescript": "5.3.3"
   }
 }
