--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -7,29 +7,32 @@
     "ui:add": "pnpm dlx shadcn-ui@latest add"
   },
   "devDependencies": {
-    "@types/node": "^17.0.12",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^7.32.0",
+    "@types/node": "^20.10.6",
+    "@types/react": "^18.2.46",
+    "@types/react-dom": "^18.2.18",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.56.0",
     "eslint-config-custom": "workspace:*",
-    "postcss": "^8.4.24",
+    "postcss": "^8.4.32",
     "react": "^18.2.0",
-    "tailwindcss": "^3.3.2",
+    "tailwindcss": "^3.4.0",
     "tsconfig": "workspace:*",
-    "typescript": "^4.5.2"
+    "typescript": "^5.3.3"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.3",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
-    "class-variance-authority": "^0.6.0",
-    "clsx": "^1.2.1",
-    "lucide-react": "^0.244.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "lucide-react": "^0.303.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
-    "tailwind-merge": "^1.13.2",
-    "tailwindcss-animate": "^1.0.6",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   }
 }
