--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
+    "sonner": "^1.3.1",
     "ui": "workspace:*",
     "zod": "^3.22.4"
   },
