--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,7 +17,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
     "sonner": "^1.3.1",
-    "ui": "workspace:*",
+    "ui": "file:ui",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -25,10 +25,10 @@
     "@types/react": "18.2.46",
     "@types/react-dom": "18.2.18",
     "autoprefixer": "^10.4.16",
-    "eslint-config-custom": "workspace:*",
+    "eslint-config-custom": "file:eslint-config-custom",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
-    "tsconfig": "workspace:*",
+    "tsconfig": "file:tsconfig",
     "typescript": "5.3.3"
   }
 }
