--- a/package.json
+++ b/package.json
@@ -7,14 +7,18 @@
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "ui:add": "pnpm --filter ui ui:add"
+    "ui:add": "npm run -w ui ui:add --"
   },
   "devDependencies": {
     "@turbo/gen": "^1.11.2",
     "eslint": "^8.56.0",
-    "eslint-config-custom": "workspace:*",
+    "eslint-config-custom": "file:eslint-config-custom",
     "prettier": "^3.1.1",
     "turbo": "^1.11.2"
   },
-  "packageManager": "pnpm@7.15.0"
+  "packageManager": "npm@8.9.0",
+  "workspaces": [
+    "./apps/*",
+    "./packages/*"
+  ]
 }
