--- a/packages/eslint-config-custom/package.json
+++ b/packages/eslint-config-custom/package.json
@@ -6,17 +6,10 @@
   "dependencies": {
     "eslint-config-next": "^13.4.1",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-config-turbo": "^1.9.3",
-    "eslint-plugin-react": "7.28.0"
+    "eslint-plugin-react": "7.28.0",
+    "eslint-config-turbo": "^1.9.3"
   },
   "publishConfig": {
     "access": "public"
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.17.0",
-    "@typescript-eslint/parser": "^6.17.0",
-    "eslint": "^8.56.0",
-    "next": "^14.0.4",
-    "typescript": "^5.3.3"
   }
 }
