--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -2,10 +2,8 @@
   "name": "tsconfig",
   "version": "0.0.0",
   "private": true,
-  "files": [
-    "base.json",
-    "next.json",
-    "react-library.json",
-    "nest.json"
-  ]
+  "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  }
 }
