--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,7 +4,8 @@
   "license": "MIT",
   "scripts": {
     "lint": "eslint \"**/*.ts*\"",
-    "ui:add": "pnpm dlx shadcn-ui@latest add"
+    "ui:add": "npx shadcn-ui@latest add",
+    "postui:add": "ts-node --esm ./scripts/generateIndex.mts"
   },
   "devDependencies": {
     "@types/node": "^20.10.6",
@@ -12,11 +13,11 @@
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.56.0",
-    "eslint-config-custom": "workspace:*",
+    "eslint-config-custom": "file:eslint-config-custom",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
     "tailwindcss": "^3.4.0",
-    "tsconfig": "workspace:*",
+    "tsconfig": "file:tsconfig",
     "typescript": "^5.3.3"
   },
   "dependencies": {
