--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,24 +11,24 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.3",
     "lucide-react": "^0.303.0",
-    "next": "^14.0.4",
-    "next-auth": "^4.24.5",
+    "next": "^14.1.3",
+    "next-auth": "^4.24.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.49.2",
-    "sonner": "^1.3.1",
+    "react-hook-form": "^7.51.0",
+    "sonner": "^1.4.3",
     "ui": "file:ui",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.10.6",
-    "@types/react": "18.2.46",
-    "@types/react-dom": "18.2.18",
-    "autoprefixer": "^10.4.16",
+    "@types/node": "^20.11.27",
+    "@types/react": "^18.2.46",
+    "@types/react-dom": "^18.2.18",
+    "autoprefixer": "^10.4.18",
     "eslint-config-custom": "file:eslint-config-custom",
-    "postcss": "^8.4.32",
-    "tailwindcss": "^3.4.0",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "tsconfig": "file:tsconfig",
-    "typescript": "5.3.3"
+    "typescript": "^5.3.3"
   }
 }
