--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -26,11 +26,13 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "^2.0.5",
     "@nestjs/platform-express": "^10.3.3",
+    "@nestjs/schedule": "^4.0.2",
     "@prisma/client": "^5.14.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "joi": "^17.11.0",
+    "puppeteer": "^22.8.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
